--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo "✅ Build completed successfully!"
       - echo "🧹 Starting CloudFront cache invalidation..."
-      - aws cloudfront create-invalidation --distribution-id EEEZ0MBZHJXXX --paths "/*"
+      - aws cloudfront create-invalidation --distribution-id EEEZ0MBZHJ9PM --paths "/*"
 
 artifacts:
   files:
